--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,7 +7,8 @@ provisioner:
 
 platforms:
   - name: ubuntu-12.04
-  - name: centos-6.4
+  - name: ubuntu-13.04
+  - name: ubuntu-13.10
 
 suites:
   - name: default
